# sergio_control

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  setup.py
launch/: start.launch
parameters/: controllers.yaml
scripts/: robot-hardware-manager
src/: actuator_parser.h  ethercat_actuator.h  ethercat_actuator_parser.h  ethercat_hardware_interface.cpp  ethercat_hardware_interface.h  ethercat_interface_descriptions.h  ethercat_interface_parser.h  ethercat_interfaces.h  io_manager.cpp  io_manager.h  ros_control_interfaces.h  sergio_control_node.cpp  sergio_hardware_interface.cpp  sergio_hardware_interface.h  sergio_hardware_interface_node.cpp  sergio_hardware_mapping.h  transmission_manager.cpp  transmission_manager.h  transmission_types.h
src/sergio_control/: __init__.py  ebutton.py  hardware_manager.py  robot_part.py
test/: differential_joint.urdf  sergio_arm.urdf  single_joint.urdf  test_actuator.cpp  test_differential_joint_position_controller.test  test_differential_joint_position_controller.yaml  test_ethercat_hardware_interface.cpp  test_hardware_interface.cpp  test_sergio_arm_joint_states.test  test_sergio_arm_joint_states.yaml  test_single_joint_position_controller.yaml  test_transmission_manager.cpp  test_transmission_manager.test  test_two_joint_position_controllers.test  test_two_joint_position_controllers.yaml  two_joints.urdf
