<?xml version="1.0"?>
<package format="2">
  <name>sergio_control</name>
  <version>0.0.0</version>
  <description>The sergio_control package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>

  <exec_depend>joint_state_controller</exec_depend>
</package>
