<?xml version="1.0"?>
<package format="2">
  <name>sergio_control</name>
  <version>0.0.0</version>
  <description>The sergio_control package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>ethercat_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>

  <exec_depend>joint_state_controller</exec_depend>
</package>
